# -*- makefile -*-
#
# Copyright (c) 2004 The Board of Trustees of the University of Illinois.
#		All rights reserved.
# Copyright (c) 2002-2004 The Trustees of Indiana University.  
#                         All rights reserved.
# 
# $Id: Makefile.am,v 1.18 2004/04/06 15:38:52 brechin Exp $
#
# This file is part of the OSCAR distribution.  See license
# information in the top-level directory.
#

include $(top_srcdir)/dist/Makefile.options

oscar_SCRIPTS		= \
			AddNode.pm \
			Configbox.pm \
			Configurator.pm \
			Database.pm \
			DelNode.pm \
			Distro.pm \
			Help.pm \
			Logger.pm \
			MAC.pm \
			MACops.pm \
			Network.pm \
			PackageBest.pm \
			Package.pm \
			PackageInUn.pm \
			Tk.pm

EXTRA_DIST		= $(oscar_SCRIPTS)
