# -*- makefile -*-
#
# Copyright (c) 2004 The Board of Trustees of the University of Illinois.
#		All rights reserved.
# Copyright (c) 2002-2005 The Trustees of Indiana University.  
#                         All rights reserved.
# 
# This file is part of the OSCAR distribution.  See license
# information in the top-level directory.
#

include $(top_srcdir)/dist/Makefile.options

SUBDIRS = OCA

oscar_SCRIPTS		= \
			AddNode.pm \
			Configbox.pm \
			Configurator.pm \
			Database.pm \
			DelNode.pm \
			Distro.pm \
			Help.pm \
			Logger.pm \
			MAC.pm \
			MACops.pm \
			Network.pm \
			NextIp.pm \
                        OCA.pm \
			PackageBest.pm \
			Package.pm \
			PackageInUn.pm \
			SISBuildSetup.pm \
			Tk.pm \
			WizardEnv.pm

EXTRA_DIST		= $(oscar_SCRIPTS)
