# -*- makefile -*-
#
# Copyright (c) 2002-2003 The Trustees of Indiana University.  
#                         All rights reserved.
# 
# $Id: Makefile.am,v 1.2 2003/07/04 14:37:08 jsquyres Exp $
#
# This file is part of the OSCAR distribution.  See license
# information in the top-level directory.
#

include $(top_srcdir)/dist/Makefile.options

oscar_SCRIPTS		= \
			OpderAbout.pm \
			OpderDownloadInfo.pm \
			OpderDownloadPackage.pm \
			OpderImages.pm \
			Opder.pl \
			OpderTable.pm \
			SelectorAbout.pm \
			SelectorImages.pm \
			SelectorManageSets.pm \
			Selector.pl \
			SelectorTable.pm \
			SelectorUtils.pm

EXTRA_DIST		= $(oscar_SCRIPTS)
