# -*- makefile -*-
#
# Copyright (c) 2002-2003 The Trustees of Indiana University.  
#                         All rights reserved.
# 
# $Id: Makefile.am,v 1.3 2003/10/21 21:53:54 tfleury Exp $
#
# This file is part of the OSCAR distribution.  See license
# information in the top-level directory.
#

include $(top_srcdir)/dist/Makefile.options

oscar_SCRIPTS		= \
			OpderAbout.pm \
      OpderAddRepository.pm \
			OpderDownloadInfo.pm \
			OpderDownloadPackage.pm \
			OpderImages.pm \
			Opder.pl \
			OpderTable.pm \
			SelectorAbout.pm \
			SelectorImages.pm \
			SelectorManageSets.pm \
			Selector.pl \
			SelectorTable.pm \
			SelectorUtils.pm

EXTRA_DIST		= $(oscar_SCRIPTS)
