# -*- makefile -*-
#
# Copyright (c) 2003 The Trustees of Indiana University.  
#                    All rights reserved.
# 
# $Id$
#
# This file is part of the OSCAR distribution.  See license
# information in the top-level directory.
#

include $(top_srcdir)/dist/Makefile.options

SUBDIRS			= HTML

oscar_SCRIPTS		= \
			HTML.pm \
			Web.pm

EXTRA_DIST		= $(oscar_SCRIPTS)
