# -*- makefile -*-
#
# Copyright (c) 2002-2004 The Trustees of Indiana University.  
#                         All rights reserved.
# 
# This file is part of the OSCAR software package.  For license
# information, see the COPYING file in the top level directory of the
# OSCAR source distribution.
#
# $Id: Makefile.am,v 1.9 2004/04/07 04:16:09 tuelusr Exp $
#

include $(top_srcdir)/dist/Makefile.options

SUBDIRS			= 00packman HTML-Tree oda oscar-httpd XML-Parser XML-Simple perl-Tk update-rpms

