# -*- makefile -*-
#
# Copyright (c) 2002-2004 The Trustees of Indiana University.  
#                         All rights reserved.
# 
# This file is part of the OSCAR software package.  For license
# information, see the COPYING file in the top level directory of the
# OSCAR source distribution.
#
# $Id: Makefile.am,v 1.10 2004/04/09 19:52:49 tuelusr Exp $
#

include $(top_srcdir)/dist/Makefile.options

SUBDIRS			= 00packman HTML-Tree oda XML-Parser XML-Simple perl-Tk update-rpms

