# -*- makefile -*-
#
# Copyright (c) 2002-2004 The Trustees of Indiana University.  
#                         All rights reserved.
# 
# This file is part of the OSCAR software package.  For license
# information, see the COPYING file in the top level directory of the
# OSCAR source distribution.
#
# $Id: Makefile.am,v 1.11 2004/04/14 05:18:09 tuelusr Exp $
#

include $(top_srcdir)/dist/Makefile.options

SUBDIRS			= 00packman 00update-rpms HTML-Tree oda XML-Parser XML-Simple perl-Tk

