# -*- makefile -*-
#
# $Id: Makefile.am,v 1.1 2002/05/30 02:24:04 jsquyres Exp $
#
# This file is part of the OSCAR distribution.
# See the copyright and license notices in the top-level directory.
#

EXTRA_DIST		= \
			Mandrake-8.1-i386.rpmlist \
			Mandrake-8.1-ia64.rpmlist \
			Mandrake-8.2-i386.rpmlist \
			RedHat-7.1-i386.rpmlist \
			RedHat-7.2-i386.rpmlist \
			RedHat-7.2-ia64.rpmlist \
			RedHat-7.3-i386.rpmlist
