# -*- makefile -*-
#
# Copyright (c) 2002-2003 The Trustees of Indiana University.  
#                         All rights reserved.
# 
# $Id: Makefile.am,v 1.3 2003/07/04 14:44:39 jsquyres Exp $
#
# This file is part of the OSCAR distribution.  See license
# information in the top-level directory.
#

include $(top_srcdir)/dist/Makefile.options

oscar_DATA		= \
			redhat-7.2-i386.rpmlist \
			redhat-7.2-ia64.rpmlist

EXTRA_DIST		= $(oscar_DATA)
