# -*- makefile -*-
#
# $Id: Makefile.am,v 1.3 2002/08/06 13:13:44 jsquyres Exp $
#
# This file is part of the OSCAR distribution.
# See the copyright and license notices in the top-level directory.
#

SUBDIRS			= hdf5 mpi pvm shell

noinst_SCRIPTS		= test_cluster

EXTRA_DIST		= README $(noinst_SCRIPTS)
