# -*- makefile -*-
#
# $Id: Makefile.am,v 1.4 2002/08/22 07:07:08 sad Exp $
#
# This file is part of the OSCAR distribution.
# See the copyright and license notices in the top-level directory.
#

SUBDIRS			= hdf5 mpi pvm shell ganglia

noinst_SCRIPTS		= test_cluster

EXTRA_DIST		= README $(noinst_SCRIPTS)
