# -*- makefile -*-
#
# $Id: Makefile.am,v 1.5 2002/09/11 07:13:19 jsquyres Exp $
#
# This file is part of the OSCAR distribution.
# See the copyright and license notices in the top-level directory.
#

SUBDIRS			= hdf5 mpi pvm shell

noinst_SCRIPTS		= test_cluster

EXTRA_DIST		= README $(noinst_SCRIPTS)
