# -*- makefile -*-
#
# Copyright (c) 2005 The Trustees of Indiana University.  
#                    All rights reserved.
# 
# This file is part of the OSCAR distribution.  See license
# information in the top-level directory.
#

include $(top_srcdir)/dist/Makefile.options

SUBDIRS = OS_Detect

oscar_SCRIPTS		= \
                        OS_Detect.pm

EXTRA_DIST		= $(oscar_SCRIPTS)
