# -*- makefile -*-
#
# Copyright (c) 2004, The Board of Trustees of the University of Illinois.
#                     All rights reserved.
#
# Copyright (c) 2002-2004 The Trustees of Indiana University.  
#                         All rights reserved.
#
#   This file is free software; you can redistribute it and/or modify
#   it under the terms of the GNU General Public License as published by
#   the Free Software Foundation; either version 2 of the License, or
#   (at your option) any later version.
#
#   This program is distributed in the hope that it will be useful,
#   but WITHOUT ANY WARRANTY; without even the implied warranty of
#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#   GNU General Public License for more details.
#
#   You should have received a copy of the GNU General Public License
#   along with this program; if not, write to the Free Software
#   Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
#
# This file is part of the OSCAR software package.
#

include $(top_srcdir)/dist/Makefile.options

oscar_DATA = \
        backarrow.png \
        ball1.png \
        ball2.png \
        ball3.png \
        ball4.png \
        ball5.png \
        close.png \
        config.png \
        download.png \
        editcopy.png \
        editcut.png \
        editpaste.png \
        filenew.png \
        fileopen.png \
        filesave.png \
        getinfo.png \
        nextarrow.png \
        oscarbg.png \
        print.png \
        redo.png \
        searchfind.png \
        undo.png
EXTRA_DIST = $(oscar_DATA)
