# -*- makefile -*-
#
# $Id: Makefile.am,v 1.1 2002/08/22 07:07:08 sad Exp $
#
# This file is part of the OSCAR distribution.
# See the copyright and license notices in the top-level directory.
#

# This makefile is *not* for building an executable -- it is only for
# making a final OSCAR tarball.

noinst_SCRIPTS		= ganglia_test.sh

EXTRA_DIST		= $(noinst_SCRIPTS)
