# -*- makefile -*-
#
# $Id: Makefile.am,v 1.1 2002/08/06 13:13:44 jsquyres Exp $
#
# This file is part of the OSCAR distribution.
# See the copyright and license notices in the top-level directory.
#

# This makefile is *not* for building an executable -- it is only for
# making a final OSCAR tarball.

noinst_SCRIPTS		= pbs_script.hdf5

EXTRA_DIST		= ph5example.c testphdf5 t_mpi $(noinst_SCRIPTS)
