# -*- makefile -*-
#
# $Id: Makefile.am,v 1.2 2002/08/16 22:23:49 jenos Exp $
#
# This file is part of the OSCAR distribution.
# See the copyright and license notices in the top-level directory.
#

# This makefile is *not* for building an executable -- it is only for
# making a final OSCAR tarball.

noinst_SCRIPTS		= pbs_script.hdf5

EXTRA_DIST		= hdf5_test.sh $(noinst_SCRIPTS)
