# -*- makefile -*-
#
# $Id: Makefile.am,v 1.3 2002/08/28 12:45:47 jsquyres Exp $
#
# This file is part of the OSCAR distribution.
# See the copyright and license notices in the top-level directory.
#

# This makefile is *not* for building an executable -- it is only for
# making a final OSCAR tarball.

noinst_SCRIPTS		= pbs_script.lam pbs_script.mpich

EXTRA_DIST		= cpi.c cxxhello.cc f77hello.f $(noinst_SCRIPTS)
