# -*- makefile -*-
#
# $Id: Makefile.am,v 1.2 2001/12/22 01:08:39 jsquyres Exp $
#
# This file is part of the OSCAR distribution.
# See the copyright and license notices in the top-level directory.
#

# This makefile is *not* for building an executable -- it is only for
# making a final OSCAR tarball.

noinst_SCRIPTS		= pbs_script.pvm

EXTRA_DIST		= master1.c slave1.c $(noinst_SCRIPTS)
