# -*- makefile -*-
#
# Copyright (c) 2002-2004 The Trustees of Indiana University.  
#                         All rights reserved.
# 
# $Id: Makefile.am,v 1.2 2004/04/06 14:28:32 brechin Exp $
#
# This file is part of the OSCAR distribution.  See license
# information in the top-level directory.
#

include $(top_srcdir)/dist/Makefile.options

oscar_DATA		= \
			packman-depman-1.3-1.noarch.rpm

EXTRA_DIST		= $(oscar_DATA)
