# -*- makefile -*-
#
# Copyright (c) 2002-2004 The Trustees of Indiana University.  
#                         All rights reserved.
# 
# $Id: Makefile.am,v 1.5 2004/04/14 10:05:23 tuelusr Exp $
#
# This file is part of the OSCAR distribution.  See license
# information in the top-level directory.
#

include $(top_srcdir)/dist/Makefile.options

oscar_DATA		= \
			packman-depman-1.3-4.noarch.rpm

EXTRA_DIST		= $(oscar_DATA)
